digital illustration layout fixed by adding spacing container and the no border footer also fixed the pages that needed a sticky footer

--- a/css/main.css
+++ b/css/main.css
@@ -211,7 +211,11 @@ html, body {
   flex-flow: column;
   justify-content: space-between;
   width: inherit;
-  height: inherit;
+  min-height: 100%;
+}
+
+.sticky-footer {
+  min-height: 100%;
 }
 
 header {
@@ -1183,8 +1187,9 @@ hr {
 
 
 .portfolio-img img {
-  width: 100%;
-  height: 100%;
+  margin: 0 3.5% 0 3.5%;
+  width: 92%;
+  height: 92%;
 }
 
 .portfolio-img-outlined img {
@@ -1198,16 +1203,18 @@ hr {
   display: flex;
   flex-flow: row nowrap;
   justify-content: space-between;
-  width: 92%;
+  width: 94.5%;
+  margin: auto;
 }
 
 .back-button {
-  width: 30px;
   margin-top: .75%;
 }
 
+
 .next-button {
-  width: 50px;
+  width: 30px;
+  padding-right: 1.4%;
 }
 
 .project-title {
@@ -1371,6 +1378,7 @@ hr {
 footer {
   display: inline-block;
   width: 100%;
+  margin-top: auto;
 }
 
 footer .full-width {
@@ -3142,10 +3150,6 @@ footer .half-width {
       background-attachment: scroll;
       background-size: 30.5%;
       background-position: -29px 0px;
-  }
-
-  .spacing-container {
-      min-height: 700px;
   }
 
   /***** GRID OPTIONS | DESKTOP min width 940px *****/
